<resources>
    <string name="app_name">Tellustrations</string>
    <string name="tb_draw_clear">Clear</string>
    <string name="tb_draw_check">Check</string>
    <string name="tb_draw_delete">Check</string>
    <string name="dialog_draw_erase_size">Set size of eraser</string>
    <string name="dialog_draw_erase_actual_size">50px</string>
    <string name="dialog_draw_erase_ok">OK</string>
    <string name="color_blue">Blue</string>
    <string name="color_red">Red</string>
    <string name="color_yellow">Yellow</string>
    <string name="color_green">Green</string>
    <string name="color_black">Black</string>
    <string name="color_orange">Orange</string>
    <string name="color_purple">Purple</string>
    <string name="color_light_green">Light Green</string>
    <string name="color_gray">Gray</string>
    <string name="color_cyan">Cyan</string>
    <string name="draw_brush">Brush</string>
    <string name="draw_pen">Pen</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>